[project]
name = "ansible-chatbot-stack"
version = "0.1.0"
description = "Ansible Lightspeed Intelligent Assistant (ALIA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.3", # Transient dep pinned to handle CVE
    "cryptography==46.0.6", # Transient dep pinned to handle CVE
    "dumb-init>=1.2.5.post1",
    "faiss-cpu==1.12",
    "lightspeed-stack-providers==0.4.3",
    "litellm==1.83.0",
    "mcp==1.26.0",
    "pillow==12.1.1", # Transient dep pinned to handle CVE
    "pyasn1==0.6.3",
    "pyjwt[crypto]==2.12.1", # Transient dep pinned to handle CVE
    "python-multipart==0.0.22", # Transient dep pinned to handle CVE
    "sentence-transformers==5.3.0",
    "starlette==0.52.1",
    "urllib3==2.6.3",
]

[dependency-groups]
dev = [
    "cachetools>=6.1.0",
    "kubernetes>=33.1.0",
    "locust>=2.39.1",
    "pre-commit>=4.2.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "requests>=2.31.0",
]
